# blast-radius

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  blastradius-design.md  pyproject.toml  requirements.txt  server.py
artifacts/: baseline_seed0.json  baseline_vs_competent_seed0.json  competent_seed0.json  demo_summary_seed0.json
docs/: blastradius-hackathon-presentation.pptx  openreward-release-checklist.md  presentation-outline.md
scripts/: analyze_trace.py  baseline_vs_competent.py  build_presentation.mjs  manual_rollout.py  openai_sample_agent.py  ors_scripted_rollout.py
src/blast_radius/: __init__.py  models.py  openai_agent.py  ors_env.py  rollouts.py  trace_analysis.py  world.py
tests/: test_openai_agent.py  test_ors_env.py  test_rollouts.py  test_trace_analysis.py  test_world.py
